--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>19-ea+8</version>
+            <version>11.0.2</version>
         </dependency>
     </dependencies>
 
